@startuml

title __WEB's Class Diagram__\n

  namespace com.mourosub.web {
    class com.mourosub.web.DataLoader {
    }
  }
  

  namespace com.mourosub.web {
    class com.mourosub.web.WebApplication {
    }
  }
  

  namespace com.mourosub.web {
    namespace controller {
      class com.mourosub.web.controller.AuthController {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace controller {
      class com.mourosub.web.controller.UsuarioController {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Actividad {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Alquileres {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Curso {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Inmersiones {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Instructor {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Material {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Reserva {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Seguros {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace model {
      class com.mourosub.web.model.Usuario {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.ActividadRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.AlquileresRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.CursoRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.InmersionRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.InstructorRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.MaterialRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.ReservaRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.SegurosRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace repository {
      interface com.mourosub.web.repository.UsuarioRepository {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace security {
      class com.mourosub.web.security.JwtUtil {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace security {
      class com.mourosub.web.security.SecurityConfig {
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace service {
      class com.mourosub.web.service.UsuarioService {
      }
    }
  }
  

  com.mourosub.web.DataLoader .up.|> org.springframework.boot.CommandLineRunner
  com.mourosub.web.DataLoader o-- com.mourosub.web.repository.InstructorRepository : instructorRepo
  com.mourosub.web.DataLoader o-- com.mourosub.web.repository.ReservaRepository : reservaRepo
  com.mourosub.web.DataLoader o-- com.mourosub.web.repository.UsuarioRepository : usuarioRepo
  com.mourosub.web.controller.AuthController o-- com.mourosub.web.repository.UsuarioRepository : usuarioRepository
  com.mourosub.web.controller.UsuarioController o-- com.mourosub.web.service.UsuarioService : usuarioService
  com.mourosub.web.model.Alquileres o-- com.mourosub.web.model.Material : material
  com.mourosub.web.model.Alquileres o-- com.mourosub.web.model.Usuario : usuario
  com.mourosub.web.model.Curso -up-|> com.mourosub.web.model.Actividad
  com.mourosub.web.model.Inmersiones -up-|> com.mourosub.web.model.Actividad
  com.mourosub.web.model.Reserva o-- com.mourosub.web.model.Actividad : actividad
  com.mourosub.web.model.Seguros o-- com.mourosub.web.model.Usuario : usuario
  com.mourosub.web.service.UsuarioService o-- com.mourosub.web.repository.UsuarioRepository : usuarioRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
